Created basic layout of body

--- a/Lab2.html
+++ b/Lab2.html
@@ -9,6 +9,50 @@
 			href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
 	</head>
 <body>
+	
+	<div class="container">
+		<div class="row">
+			<div class="span5">Logo goes here</div>
+			<div class="span6 offset5">
+				<ul class="pills">
+			    <li class="active"><a href="#">Home</a></li>
+			    <li><a href="#">Profile</a></li>
+			    <li><a href="#">Messages</a></li>
+			    </ul>
+			</div>
+		</div>
+		<div class="row">
+				<div class="span16"> <!--create background color in style sheet and add-->
+						<div class="row">
+							<div class="span7">
+								<h1>Super Awesome Product</h1>
+								Best product ever.
+							</div>
+							<div class="span4 offset5">
+								Picture goes here
+							</div>
+						</div>
+				</div>
+		</div>
+		<!--Create spacer css to add space in between, minimum height-->
+		<div class="row">
+			<div class="span6">
+				Column 1 content
+				If creating spacers in separate css, would add above this row and 		
+				below this row to add spacing between.
+			</div>
+			<div class="span6 offset2">
+				Column 2 content
+			</div>
+		<div>
+		<!--Use spacer css to add space between columns and bottom image-->
+		
+		<div class="row">
+			<div class="span16">
+				Bottom image goes here and spans 16
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
